- show all games in admin & show active categories in game create & update

--- a/admin/public/index.html
+++ b/admin/public/index.html
@@ -2,7 +2,7 @@
 <html lang='en'>
 <head>
   <title>Admin Dashboard</title>
-  <link href='%PUBLIC_URL%/favicon.svg' rel='icon'/>
+  <link href='%PUBLIC_URL%/logo-icon.png' rel='icon'/>
 
 
   <!-- Meta Tags-->
